# lomsh

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: _config.yml  colours.md  context-window.md  context.md  decisions.md  index.md  models.md  requirements.md
docs/_includes/: head_custom.html
docs/_sass/custom/: custom.scss
lomsh/: __main__.py  agent.py  cli.py  colours.py  config.py  shell.py  stats.py
tests/: test_agent.py  test_cli.py  test_colours.py  test_session.py  test_stats.py  test_stream.py
